# python-basic-homeworks

./: requirements.txt
.github/workflows/: test-django-app.yml
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: config.py  docker-compose.yaml  main.py  prestart.sh  requirements.txt
homework_06/forms/: product_create.py
homework_06/migrations/: alembic.ini
homework_06/migrations/versions/: 54f5ee17a3a2_create_products_table.py
homework_06/models/: __init__.py  product.py
homework_06/templates/: about.html  base.html
homework_06/templates/products/: add.html  list.html
homework_07/comparator/: manage.py
homework_07/comparator/comparator/: settings.py  urls.py
homework_07/comparator/items/: admin.py  models.py  tasks.py  urls.py  views.py
homework_08/comparator/: docker-compose.yml
homework_08/comparator/comparator/: celery.py
homework_08/comparator/items/: tasks.py  urls.py  views.py
homework_08/comparator/myauth/: admin.py  models.py
homework_09/comparator/comparator/: asgi.py  settings.py
homework_09/comparator/items/: urls.py  views.py
homework_09/comparator/myauth/: urls.py  views.py
homework_09/comparator/myauth/tests/: test_login.py
homework_10/: README.md
homework_10/comparator/comparator/: urls.py  wsgi.py
homework_10/comparator/items/: forms.py  models.py
homework_10/comparator/myauth/: forms.py  urls.py
(+15 files in other folders)
