[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = "fastapi_docker-homework"
authors = ["i.kartashov <i.kartashov@yadro.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
